# APG

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
source/: AlbumArtworkDisplayer.cpp  AlbumArtworkDisplayer.h  AudioMetadataManager.cpp  AudioMetadataManager.h  AudioMetadataUtils.h  AudioPlayer.cpp  AudioPlayer.h  AudioThumbnailComp.cpp  AudioThumbnailComp.h  BpmDetector.h  Fonts.h  FontsPoppins.h  KeyDetector.h  MIR.cpp  MIR.h  Main.cpp  MainComponent.cpp  MainComponent.h  NonModalAlertWindow.cpp  NonModalAlertWindow.h  PlaylistComponent.cpp  PlaylistComponent.h  PlaylistCreationComponent.cpp  PlaylistCreationComponent.h  PlaylistSettingsComponent.h  PlaylistSongViewComponent.cpp  PlaylistSongViewComponent.h  PlaylistTrackManagerComponent.cpp  PlaylistTrackManagerComponent.h  SidePanelWithBrowser.h  TagLibFileHandler.cpp  TagLibFileHandler.h  TextButtonWithClickOptions.h  ThreadWithNonModalAlertWindow.cpp  ThreadWithNonModalAlertWindow.h  TrackInfoComponent.cpp  TrackInfoComponent.h  TransportSlider.h  WaveformView.cpp  WaveformView.h
